# ijkplayer

./: init-android-libyuv.sh  init-android.sh  yuv_cmakelists.txt
android-cmake/ijkplayer/: build.gradle  settings.gradle
android-cmake/ijkplayer/app/: build.gradle  proguard-rules.pro
android-cmake/ijkplayer/app/src/main/: AndroidManifest.xml
android-cmake/ijkplayer/app/src/main/java/tv/danmaku/ijk/media/example/activities/: VideoActivity.java
android-cmake/ijkplayer/app/src/main/java/tv/danmaku/ijk/media/example/fragments/: TracksFragment.java
android-cmake/ijkplayer/app/src/main/res/layout/: activity_main.xml
android-cmake/ijkplayer/gradle/wrapper/: gradle-wrapper.properties
android-cmake/ijkplayer/ijkplayer-exo/: build.gradle
android-cmake/ijkplayer/ijkplayer-java/: build.gradle
android-cmake/ijkplayer/ijkplayer-java/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
android-cmake/ijkplayer/ijkplayer-native-libs/: CMakeLists.txt  build.gradle  proguard-rules.pro
android-cmake/ijkplayer/ijkplayer-native-libs/src/main/: AndroidManifest.xml
android-cmake/ijkplayer/ijkplayer-native-libs/src/main/java/com/amos/ijkplayer_native_libs/: Program.java
android-cmake/ijkplayer/ijkplayer-native-libs/src/main/res/values/: strings.xml
ijkmedia/: CMakeLists.txt
ijkmedia/ijkj4a/: CMakeLists.txt
ijkmedia/ijkplayer/: CMakeLists.txt
ijkmedia/ijkplayer/ijkavutil/: ijkstl.cpp
ijkmedia/ijksdl/: CMakeLists.txt
ijkmedia/ijksdl/android/: android_nativewindow.c
ijkprof/android-ndk-profiler-dummy/jni/: CMakeLists.txt
(+1 files in other folders)
